# WenZi

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  WenZi-Lite.spec  WenZi.spec  pyproject.toml
.github/workflows/: build-mac-app.yml  test.yml
debug_scripts/: debug_keys.py  debug_keys_quartz.py  debug_mic.py  debug_pynput.py  test_embedding.py  test_rumps_window.py
dev/: asyncio-migration-plan.md  cgeventtap.md  chooser-lifecycle.md  liquid-glass-api.md  liquid-glass.md  memory-leak-debug.md  plugin-apis.md  screenshot.md  ui-patterns.md  vocab-hit-tracking-backend-plan.md  vocab-hit-tracking-design.md  vocab-hit-tracking-frontend-plan.md  vocab-hit-tracking.md  wkwebview-pitfalls.md  writing-efficient-tests.md
docs/: configuration-zh.md  configuration.md  enhance-modes.md  error-correction-zh.md  error-correction.md  provider-model-guide-zh.md  provider-model-guide.md  scripting-zh.md  scripting.md  user-guide-zh.md  user-guide.md  vocabulary-embedding-retrieval-zh.md  vocabulary-embedding-retrieval.md
docs/release-notes/: v0.2.0.md
plugins/: registry.toml
plugins/async_demo/: commands.py  plugin.toml
plugins/cc_sessions/: __init__.py  auto_reload.py  identicon.py  init_plugin.py  plugin.toml  scanner.py  viewer.html
plugins/dictionary/: render.py  youdao.py
plugins/emoji_search/: README.md  README_zh.md  __init__.py  plugin.toml
plugins/search_engines/: __init__.py  engines.toml  plugin.toml
plugins/window_manager/: plugin.toml
resources/: icon.icns
scripts/: build-dmg.sh  build-lite.sh  build.sh  build_docs.py  gen_test_vocab.py  process_icon.py  sync_registry.py
site/: index.html
site/css/: style.css
site/docs/: configuration.html  conversation-history-enhancement.html  enhance-mode-examples.html  enhance-modes.html  error-correction.html  prompt-optimization.html  provider-model-guide.html  scripting.html  user-guide.html  vocabulary-embedding-retrieval.html
site/js/: main.js
site/zh/: index.html
src/voicetext/: __main__.py  app.py  auto_vocab_builder.py  config.py  conversation_history.py  enhance_controller.py  enhancer.py  history_browser_window.py  hotkey.py  input.py  log_viewer_window.py  lru_cache.py  menu_builder.py  mode_loader.py  model_controller.py  model_registry.py  punctuation.py  recorder.py  recording_indicator.py  result_window.py  settings_window.py  sound_manager.py  streaming_overlay.py  transcriber.py  transcriber_apple.py  transcriber_funasr.py  transcriber_mlx.py  transcriber_whisper_api.py  translate_webview.py  ui_helpers.py  usage_stats.py  vocab_build_window.py  vocabulary_builder.py
src/wenzi/: __init__.py  _cgeventtap.py  app.py  async_loop.py  config.py  hotkey.py  i18n.py  input.py  input_context.py  input_source.py  statusbar.py  ui_helpers.py  updater.py  vault.py
tests/: conftest.py  test_app_menu.py  test_async_loop.py  test_build_type.py  test_clipboard_enhance.py  test_config.py  test_conversation_history.py  test_direct_streaming.py  test_enhance_cache.py  test_enhance_controller.py  test_enhancer.py  test_history_browser_window.py  test_hotkey.py  test_input.py  test_input_context.py  test_input_source.py  test_locale_completeness.py  test_log_viewer_window.py  test_lru_cache.py  test_model_controller.py  test_model_load_error_alert.py  test_result_window.py  test_settings_window.py  test_statusbar.py  test_streaming_overlay.py  test_transcriber.py  test_transcriber_funasr.py  test_transcriber_mlx.py  test_transcriber_whisper_api.py  test_translate_webview.py  test_ui_helpers.py  test_updater.py  test_usage_stats.py  test_vault.py  test_vocab_build_window.py  test_vocabulary_builder.py  test_voice_input_setup.py
tests/audio/: test_recorder.py  test_recording_indicator.py  test_sound_manager.py
tests/controllers/: test_config_controller.py  test_enhance_controller.py  test_enhance_token_counting.py  test_model_controller.py  test_preview_controller.py  test_recording_controller.py  test_recording_flow.py  test_settings_controller.py  test_settings_controller_plugins.py  test_universal_action_controller.py  test_update_controller.py  (+1 more)
(+237 files in other folders)
