[project]
name = "wenzi"
version = "0.1.13"
description = "macOS menubar app: hold hotkey to record, release to transcribe and type"
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-Cocoa>=10.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "numpy>=1.24.0",
    "pynput>=1.8.0",
    "openai-agents>=0.11.0",
    "pypinyin>=0.53",
    "pyobjc-framework-Speech>=10.0",
    "pyobjc-framework-webkit>=12.1",
    "pyobjc-framework-AVFoundation>=10.0",
    "pyobjc-framework-Security>=10.0",
    "pyyaml>=6.0",
    "simpleeval>=1.0.5",
    "pint>=0.24",
    "certifi>=2024.0",
    "cryptography>=43.0",
    "zhconv>=1.4.3",
]

[project.optional-dependencies]
local-asr = [
    "librosa>=0.11.0",
    "funasr_onnx>=0.4.1",
    "jieba>=0.42.1",
    "modelscope>=1.30.0",
    "mlx-whisper>=0.4.3",
    "sherpa-onnx>=1.12.29",
    "sherpa-onnx-core>=1.12.29",
]
# NOTE: sherpa-onnx declares sherpa-onnx-core as a dependency, but uv's resolver
# does not always pick it up from the sdist metadata. Listing it explicitly
# ensures libonnxruntime is present at runtime.
#
# NOTE: funasr-onnx declares numpy<=1.26.4. The override below
# forces the resolver to accept numpy 1.26.4.

[project.urls]
Homepage = "https://github.com/Airead/WenZi"
Discord = "https://discord.gg/a5HzmNMC7P"

[project.scripts]
wenzi = "wenzi.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wenzi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "plugins"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
]

[tool.uv]
override-dependencies = ["numpy==1.26.4"]

[dependency-groups]
dev = [
    "py2app>=0.28.10",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_docs.py" = ["E501"]
"src/wenzi/ui/settings_window_web.py" = ["E501"]
